2004-02-09  Michael Yount <csf@moscow.com>

	* lib/Mj/BounceHandler.pm:  (handle_bounce_probe)
	Include the reasons from the token data.
	(handle_bounce_user)  Bugfix:  Only mention that
	the subscriber was removed for no probe/no consult.
	Thanks to SRE.

2004-02-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (digest)  Add missing substitutions.
	Thanks to SRE.

	* lib/Mj/Format.pm:  (createlist, set, show)  Sanitize
	lists more carefully.  Thanks to SRE.

	* lib/Mj/Inform.pm:  (_inform_owner)  Remove example.com
	from two substitutions.  Thanks to SRE.

	* lib/Mj/Util.pm:  (process_rule)  Add "or" to the list
	of Safe compartment operations.  Thanks to SRE.

2004-02-04  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Initialize variables
	sooner to avoid warnings.  Thanks to Brock Rozen.

2004-02-03  Michael Yount <csf@moscow.com>

	* convertdb.pl:  Remove parentheses in "grep" arguments.
	Thanks to SRE.

	* bin/mj_queueserv:  (in, out) Validate file handle.
	Thanks to SRE.

	* lib/Majordomo.pm:  (_make_list)  Add valid_list
	callback.

	* lib/Mj/Access.pm:  (_d_post)  Add anchors to restrict_post
	tests.

	* lib/Mj/Config.pm:  (parse_restrict_post)  Validate
	the list names.
	(_compile_rule)  Bugfix:  Separate right parens from
	comparisons.  Thanks to SRE.

	* lib/Mj/Util.pm:  (shell_hook)  Do not use ".." in
	scripts directory name in consideration of symlinks.  
	Thanks to SRE.

	* setup/install_util.pl:  (copy_file, rcopy)  Unlink
	the destination before copying.  Thanks to SRE.

2004-01-27  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_keyed)  Bugfix:  Count
	array elements before splicing them.
	Thanks to Brock Rozen.

2004-01-23  Michael Yount <csf@moscow.com>

	* lib/Mj/Access.pm:  (list_access_check)  Bugfix:  Arrange 
	to delete the spool file for a posted message if the only
	terminal action is "forward".

	* lib/Mj/Resend.pm:  (post)  Delete any temporary files