@@ -1,3 +1,8 @@
+2004-02-10  Michael Yount <csf@moscow.com>
+
+	* lib/Mj/Config.pm:  (parse_bounce_rules)
+	Validate "remove" action modes.
+
 2004-02-09  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/BounceHandler.pm:  (handle_bounce_probe)
